--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -2,6 +2,11 @@ server:
   port: 9090
 
 spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/wuhan?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
+    username: root
+    password: root
   mqtt:
     client:
       id: mqttId
