--- a/Spring-Boot-Docker/src/main/docker/Dockerfile
+++ b/Spring-Boot-Docker/src/main/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jdk-alpine
 VOLUME /tmp
 ADD docker-demo-0.0.1-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ENTRYPOINT ["java","-jar","/app.jar"]
