--- a/SpringBoot-MyBatisPlus/src/main/resources/application.yml
+++ b/SpringBoot-MyBatisPlus/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 # DataSource Config
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=true
     username: root
-    password: root
+    password:
+server:
+  port: 9090
