--- a/Spring-Boot-Admin-Demo/spring-boot-admin-client/src/main/resources/application.yml
+++ b/Spring-Boot-Admin-Demo/spring-boot-admin-client/src/main/resources/application.yml
@@ -1,12 +1,16 @@
 spring:
   application:
     name: admin-client
-  boot:
-    admin:
-      client:
-        url: http://localhost:8769
-server:
-  port: 8768
+
+eureka:
+  instance:
+    lease-renewal-interval-in-seconds: 10
+   # health-check-url-path: /actuator/health
+
+  client:
+    registry-fetch-interval-seconds: 5
+    service-url:
+      defaultZone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
 
 management:
   endpoints:
@@ -16,3 +20,6 @@ management:
   endpoint:
     health:
       show-details: ALWAYS
+
+server:
+  port: 8762
