--- a/Spring-Boot-Admin-Demo/spring-boot-admin-server/src/main/resources/application.yml
+++ b/Spring-Boot-Admin-Demo/spring-boot-admin-server/src/main/resources/application.yml
@@ -1,5 +1,30 @@
 spring:
   application:
     name: admin-server
+  security:
+    user:
+      name: "admin"
+      password: "admin"
+
 server:
   port: 8769
+
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_SERVICE_URL:http://localhost:8761}/eureka/
+  instance:
+    leaseRenewalIntervalInSeconds: 10
+    #health-check-url-path: /actuator/health
+    metadata-map:
+      user.name: ${spring.security.user.name}
+      user.password: ${spring.security.user.password}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
