--- a/坐标转化/coordinates/pom.xml
+++ b/坐标转化/coordinates/pom.xml
@@ -62,6 +62,12 @@
             <version>2.10.6</version>
         </dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.9</version>
+		</dependency>
+
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
