--- a/SpringBoot-MyBatisPlus/pom.xml
+++ b/SpringBoot-MyBatisPlus/pom.xml
@@ -74,6 +74,18 @@
 			<version>1.1.24</version>
 		</dependency>
 
+		<!--swagger-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
