支持各种统计规则的性能计数器-V2.0

--- a/design_demo/pom.xml
+++ b/design_demo/pom.xml
@@ -46,6 +46,12 @@
 			<version>2.9.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>5.4.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
