EventBus 简易实现 观察者模式

--- a/design_demo/pom.xml
+++ b/design_demo/pom.xml
@@ -52,6 +52,14 @@
 			<version>5.4.5</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>31.1-jre</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
